tests/negative/unterminated_comment.c
/* unterminated
int main(void) { return 0; }
